--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,13 @@
+<IfModule mod_security.c>
+ SecFilterEngine Off
+ SecFilterScanPOST Off
+</IfModule>
+
 Options -Indexes
 
-<FilesMatch ".*\.(log|init|htaccess)$">
-    deny from all
-</FilesMatch>
+#<FilesMatch ".*\.(log|init|htaccess)$">
+#    deny from all
+#</FilesMatch>
 
 <IfModule mod_rewrite.c>
     RewriteEngine On
@@ -14,3 +19,4 @@ Options -Indexes
     RewriteRule ^(.*)/(.*)$ index.php?module=$1&action=$2 [L,QSA]
     RewriteRule ^(.*)$ index.php?controller=$1 [L,QSA]
 </IfModule>
+
